[gd_scene load_steps=6 format=3 uid="uid://b5vpbyce736yb"]

[ext_resource type="Script" path="res://assets/objects/menus/selecter_screen.gd" id="1_aspdm"]
[ext_resource type="Texture2D" uid="uid://dk2h77mrp0p35" path="res://assets/sprites/menus/screen_mode.png" id="2_3rrr0"]
[ext_resource type="Texture2D" uid="uid://d3rfhmap2rg2r" path="res://assets/sprites/menus/selecter.png" id="3_76sll"]
[ext_resource type="AudioStream" uid="uid://c4wqpakvse6f1" path="res://assets/sounds/snd_squeak.wav" id="4_u72e8"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_s11wv"]
blend_mode = 2

[node name="Selecter" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aspdm")
texture = ExtResource("2_3rrr0")

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_u72e8")
volume_db = 12.0
bus = &"Effects"

[node name="GridContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="GridContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Text" type="TextureRect" parent="GridContainer/Control"]
custom_minimum_size = Vector2(5, 5)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -2.5
offset_right = 90.0
offset_bottom = 2.5
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("2_3rrr0")
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="GridContainer/Control/Text"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = -1
theme_override_constants/margin_top = -1
theme_override_constants/margin_right = -1
theme_override_constants/margin_bottom = -1

[node name="ColorRect" type="ColorRect" parent="GridContainer/Control/Text/MarginContainer"]
material = SubResource("CanvasItemMaterial_s11wv")
layout_mode = 2
size_flags_horizontal = 0

[node name="Selecters_Container" type="Control" parent="GridContainer/Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -27.0
grow_horizontal = 0
grow_vertical = 2

[node name="Selecter2" type="Sprite2D" parent="GridContainer/Control/Selecters_Container"]
position = Vector2(6.5, 0.5)
texture = ExtResource("3_76sll")
hframes = 4

[node name="Selecter3" type="Sprite2D" parent="GridContainer/Control/Selecters_Container"]
position = Vector2(15.5, 0.5)
texture = ExtResource("3_76sll")
hframes = 4

[node name="Selecter4" type="Sprite2D" parent="GridContainer/Control/Selecters_Container"]
position = Vector2(23.5, 0.5)
texture = ExtResource("3_76sll")
hframes = 4

[node name="DisplayMode" type="TextureRect" parent="GridContainer"]
custom_minimum_size = Vector2(5, 5)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
texture = ExtResource("2_3rrr0")
stretch_mode = 3
